updated navbar, resume, and skills bar

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 <a class="nav-link active" href="#home">Home</a>
               </li>
               <li class="btn">
-                <a class="nav-link" href="#demo">Past Work</a>
+                <a class="nav-link" href="imageGallery.html">Past Work</a>
               </li>
               <li class="btn">
                 <a class="nav-link" href="#myresume">Resume</a>
               </li>
               <li class="btn">
-                <a class="nav-link" href="#Overall">Overall Skills</a>
+                <a class="nav-link" href="#skills">Skills</a>
               </li>
               <li class="btn">
                 <a class="nav-link" href="#contactme">Contact Me</a>
@@ -192,33 +192,82 @@
 
 
           <div class="row mb-4">
-            <a href="imageGallery.html" target="myFrame"><button class="css-button-neumorphic1 bg-secondary">Click to
+            <a href="imageGallery.html" target="myFrame"><button class="css-button-neumorphic1">Click to
                 View All of My Work!</button></a>
           </div>
         </div>
 
-        <div class="row">
-          <div class="card mx-auto bg-dark border-white" style="width: 50rem;" id="myresume">
-            <h5 class="card-title text-center text-white">My Resume</h5>
-            <img src="img/Resume New1.png" class="card-img-top" alt="...">
-            <img src="img/Resume New2.png" class="card-img-top">
-            <br>
-            <h5 class="download1 text-center text-white"><a
-                href="https://drive.google.com/file/d/1G3b4EhMcjYloOE4OOpwFbNOcK__O--bX/view?usp=sharing">Download My
-                Resume!</a></h5>
-            <br>
-            <br>
-
+        <div class="row mb-5">
+          <div class="col"></div>
+          <div class="col-md-4">
+            <p class="text-center text-white jumboTop pb-3">My Resume</p>
           </div>
+          <div class="col"></div>
         </div>
-        <br>
-        <br>
-        <div class="row" id="Overall">
 
+        <div class="row">
+          <div class="col"></div>
+          <div class="col resume1">
+            <div class="card mx-auto" style="width: 50rem;" id="myresume">
+              <h5 class="card-title text-center text-white">My Resume</h5>
+              <img src="img/Resume New1.png" class="card-img-top" alt="...">
+              <img src="img/Resume New2.png" class="card-img-top">
+            </div>
+          </div>
+          <div class="col"></div>
         </div>
-        
-          <a href="#button" class="top border border-light">Back to Top ↑</a>
-  
+
+        <div class="row mb-4 mt-4">
+          <a href="https://drive.google.com/file/d/1G3b4EhMcjYloOE4OOpwFbNOcK__O--bX/view?usp=sharing"
+            target="myFrame"><button class="css-button-neumorphic1">Download My Resume!</button></a>
+        </div>
+
+        <div class="row" id="skills">
+          <div class="col"></div>
+          <div class="col-md-10 box1">
+            <div class="skill-box">
+              <span class="title text-white">HTML</span>
+
+              <div class="skill-bar">
+                <span class="skill-per html">
+                  <span class="tooltip">90%</span>
+                </span>
+              </div>
+            </div>
+
+            <div class="skill-box">
+              <span class="title text-white">CSS</span>
+
+              <div class="skill-bar">
+                <span class="skill-per css">
+                  <span class="tooltip">70%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="title text-white">JavaScript</span>
+
+              <div class="skill-bar">
+                <span class="skill-per javascript">
+                  <span class="tooltip">50%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="title text-white">Digital Media</span>
+
+              <div class="skill-bar">
+                <span class="skill-per digitalMedia">
+                  <span class="tooltip">30%</span>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col"></div>
+        </div>
+
+        <a href="#button" class="top border border-light">Back to Top ↑</a>
+
       </div>
 
     </div>
