--- a/imageGallery.html
+++ b/imageGallery.html
@@ -15,73 +15,113 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
 
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Bungee+Shade&family=Rye&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="container-fluid p-auto">
     <div class="stars">
       <div class="twinkling">
-        <hr class="bg-white">
-        <h1 class="text-center">My Work</h1>
-        <hr class="bg-white">
+        <nav class="fill navbar navbar-expand-md navbar-dark border border-light mt-4 mb-5" href="#" id="button">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            <p class="navBarName">Max Reiss</p>
+          </a>
+          <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="btn">
+                <a class="nav-link active" href="index.html">Home</a>
+              </li>
+              <li class="btn">
+                <a class="nav-link" href="#demo">Past Work</a>
+              </li>
+              <li class="btn">
+                <a class="nav-link" href="#myresume">Resume</a>
+              </li>
+              <li class="btn">
+                <a class="nav-link" href="#Overall">Overall Skills</a>
+              </li>
+              <li class="btn">
+                <a class="nav-link" href="#contactme">Contact Me</a>
+              </li>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="row">
+          <div class="col"></div>
+          <div class="col">
+            <p class="previous text-center text-white mb-5">Previous Projects</p>
+          </div>
+          <div class="col"></div>
+        </div>
+
         <div class="grid-container">
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/Website--2/"><img class='grid-item grid-item-1' src='img/WeeklyWebsite2.png' alt=''></a>
+            <a href="https://mreiss97.github.io/Website--2/"><img class='grid-item grid-item-1'
+                src='img/WeeklyWebsite2.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #2)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/Postcard-Generator/"><img class='grid-item grid-item-1' src='img/postcardgen.png' alt=''></a>
+            <a href="https://mreiss97.github.io/Postcard-Generator/"><img class='grid-item grid-item-1'
+                src='img/postcardgen.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #2)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/Website--3/"><img class='grid-item grid-item-1' src='img/stpattysdaylottery.png' alt=''></a>
+            <a href="https://mreiss97.github.io/Website--3/"><img class='grid-item grid-item-1'
+                src='img/stpattysdaylottery.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #2)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB1-Old-Portfolio/"><img class='grid-item grid-item-1' src='img/oldportfolio.png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB1-Old-Portfolio/"><img class='grid-item grid-item-1'
+                src='img/oldportfolio.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/Rock-Paper-Scissors-JS-project/"><img class='grid-item grid-item-1' src='img/rock paper scissors.png' alt=''></a>
+            <a href="https://mreiss97.github.io/Rock-Paper-Scissors-JS-project/"><img class='grid-item grid-item-1'
+                src='img/rock paper scissors.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #2)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/Simple-Accordion/"><img class='grid-item grid-item-1' src='img/simpleaccordion.png' alt=''></a>
+            <a href="https://mreiss97.github.io/Simple-Accordion/"><img class='grid-item grid-item-1'
+                src='img/simpleaccordion.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #2)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/Random-Testimonial/"><img class='grid-item grid-item-1' src='img/Randomtestimonial.png' alt=''></a>
+            <a href="https://mreiss97.github.io/Random-Testimonial/"><img class='grid-item grid-item-1'
+                src='img/Randomtestimonial.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #2)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB1-Sea-Animals-Project/"><img class='grid-item grid-item-1' src='img/SeaAnimals (2).png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB1-Sea-Animals-Project/"><img class='grid-item grid-item-1'
+                src='img/SeaAnimals (2).png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB1-Fetch-Coffee-Shop/"><img class='grid-item grid-item-1' src='img/FetchCoffeeShop.png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB1-Fetch-Coffee-Shop/"><img class='grid-item grid-item-1'
+                src='img/FetchCoffeeShop.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB2-Halloween-Bootstrap-Project/"><img class='grid-item grid-item-1' src='img/halloweenbootstrap.png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB2-Halloween-Bootstrap-Project/"><img class='grid-item grid-item-1'
+                src='img/halloweenbootstrap.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #2)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB1-First-Website/"><img class='grid-item grid-item-1' src='img/FirstEverWebsite.png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB1-First-Website/"><img class='grid-item grid-item-1'
+                src='img/FirstEverWebsite.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/CSS-Buttons/"><img class='grid-item grid-item-1' src='img/CSSbuttons.png' alt=''></a>
+            <a href="https://mreiss97.github.io/CSS-Buttons/"><img class='grid-item grid-item-1'
+                src='img/CSSbuttons.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
@@ -89,56 +129,52 @@
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB1-Dukes-Wakiki/"><img class='grid-item grid-item-1' src='img/DukesWakiki.png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB1-Dukes-Wakiki/"><img class='grid-item grid-item-1'
+                src='img/DukesWakiki.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB1-Bootstrap-2/"><img class='grid-item grid-item-1' src='img/Bootstrap2.png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB1-Bootstrap-2/"><img class='grid-item grid-item-1'
+                src='img/Bootstrap2.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/Divs-and-Spans/"><img class='grid-item grid-item-1' src='img/DivsandSpans.png' alt=''></a>
+            <a href="https://mreiss97.github.io/Divs-and-Spans/"><img class='grid-item grid-item-1'
+                src='img/DivsandSpans.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB1-CSS-Grid/"><img class='grid-item grid-item-1' src='img/CSSgrid.png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB1-CSS-Grid/"><img class='grid-item grid-item-1' src='img/CSSgrid.png'
+                alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/Style-Me-Project/"><img class='grid-item grid-item-1' src='img/portfolio image 2.png' alt=''></a>
+            <a href="https://mreiss97.github.io/Style-Me-Project/"><img class='grid-item grid-item-1'
+                src='img/portfolio image 2.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #2)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB1-Awesome-Logo/"><img class='grid-item grid-item-1' src='img/AwesomeLogo.png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB1-Awesome-Logo/"><img class='grid-item grid-item-1'
+                src='img/AwesomeLogo.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
           <div class="border border-light">
-            <a href="https://mreiss97.github.io/WEB1-Chemistry-Vocab/"><img class='grid-item grid-item-1' src='img/ChemistryVocab.png' alt=''></a>
+            <a href="https://mreiss97.github.io/WEB1-Chemistry-Vocab/"><img class='grid-item grid-item-1'
+                src='img/ChemistryVocab.png' alt=''></a>
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
         </div>
-    </div>
-</div>
-</div>
-
-</div>
-        </div>
       </div>
     </div>
-<script src="/script.js"></script>
+  </div>
+
+  </div>
+  </div>
+  </div>
+  </div>
+  <script src="/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="//tympanus.net/codrops/adpacks/demoad.js"></script>
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-  
- 
