added about me page, finished resume

--- a/imageGallery.html
+++ b/imageGallery.html
@@ -37,20 +37,19 @@
           <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="btn">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="btn">
-                <a class="nav-link" href="#demo">Past Work</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="btn">
-                <a class="nav-link" href="#myresume">Resume</a>
+                <a class="nav-link" href="imageGallery.html">Past Work</a>
               </li>
               <li class="btn">
                 <a class="nav-link" href="#Overall">Overall Skills</a>
               </li>
               <li class="btn">
                 <a class="nav-link" href="#contactme">Contact Me</a>
-              </li>
               </li>
             </ul>
           </div>
