added about me page

--- a/about.html
+++ b/about.html
@@ -54,7 +54,24 @@
             </ul>
           </div>
         </nav>
-      
+        <div class="row">
+          <p class="about1 text-white text-center">About Me</p>
+        </div>
+        <div class="row">
+          <div class="col"></div>
+          <div class="col text-end">
+            <img src="img/Max Reiss Picture.jpg" class="max1 mt-5">
+          </div>
+          <div class="col">
+            <p class="aboutText1 text-white mt-5 pt-3 pb-3 pl-3 pr-3">
+              Hi, I'm Max Reiss, a 17-year-old from Marlboro, New Jersey. I'm passionate about web design and cybersecurity, with a love for computers and gaming inspiring my creativity and drive. I’ve been involved with web design for over 3 years, and have mastered HTML, CSS, & JavaScript. I also have experience with digital media where I can edit photos as well as design anything using photoshop. Computers and gaming are more than just hobbies–they’re integral parts of my life and inspire me for my web design projects. While I aim to establish myself as a skilled web designer, my primary career goal is cybersecurity. I think these fields complete each other well and offer unique challenges and opportunities for my growth. I plan to use both web design and cybersecurity to create a fulfilling and impactful career for myself.
+            </p>
+          </div>
+          <div class="col"></div>
+        </div>
+        <div class="row mb-4 mt-5">
+          <a href="index.html" target="myFrame"><button class="css-button-neumorphic1 mt-5">Click here to the main page!</button></a>
+        </div>
 
       </div>
     </div>
