added contact form, fixed all borders

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="#Overall">Overall Skills</a>
               </li>
               <li class="btn">
-                <a class="nav-link" href="#contactme">Contact Me</a>
+                <a class="nav-link" href="contact.html">Contact Me</a>
               </li>
             </ul>
           </div>
@@ -406,7 +406,7 @@
             target="myFrame"><button class="css-button-neumorphic1">Download My Resume!</button></a>
         </div>
 
-        <div class="row" id="skills">
+        <div class="row" id="Overall">
           <div class="col"></div>
           <div class="col-md-10 box1">
             <div class="skill-box">
