--- a/imageGallery.html
+++ b/imageGallery.html
@@ -49,7 +49,7 @@
                 <a class="nav-link" href="#Overall">Overall Skills</a>
               </li>
               <li class="btn">
-                <a class="nav-link" href="#contactme">Contact Me</a>
+                <a class="nav-link" href="contact.html">Contact Me</a>
               </li>
             </ul>
           </div>
