--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         <div class="row">
           <div class="col"></div>
           <div class="col text-end">
-            <img src="img/Max Reiss Picture.jpg" class="max1 mt-5">
+            <img src="" class="max1 mt-5">
           </div>
           <div class="col">
             <p class="aboutText1 text-white mt-5 pt-3 pb-3 pl-3 pr-3">
