--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                             <div class="sent-message">Thank you for reaching out, Someone will be in contact with you ASAP about
                               your email.</div>
                           </div>
-                          <div class="text-center"><button type="submit" onclick="gtag_report_conversion()">Send Message</button>
+                          <div class="text-center"><button type="submit" >Send Message</button>
                           </div>
                         </form>
             
@@ -98,7 +98,7 @@
         </div>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="//tympanus.net/codrops/adpacks/demoad.js"></script>
 </body>
