--- a/contact.html
+++ b/contact.html
@@ -101,6 +101,7 @@
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="//tympanus.net/codrops/adpacks/demoad.js"></script>
+    <script src="php-email-form/validate.js"></script>
 </body>
 
 </html>
