--- a/main.html
+++ b/main.html
@@ -66,7 +66,7 @@
         <div class="row">
           <div class="col"></div>
           <div class="col">
-            <p class="explore text-center" data-cursor-text="Hello!" id="custom-cursor">Explore!</p>
+            <p class="explore text-center" data-cursor-text="Hello!">Explore!</p>
           </div>
           <div class="col"></div>
         </div>
