--- a/about.html
+++ b/about.html
@@ -21,63 +21,154 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css" />
+
+  <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+  <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
 </head>
 
 <body>
-  <div class="container-fluid p-auto">
+  <div class="container-fluid p-auto no-cursor">
     <div class="stars">
       <div class="twinkling">
-        <nav class="fill navbar navbar-expand-md navbar-dark border border-light mt-4 mb-5" href="#" id="button">
+        <nav class="fill navbar navbar-expand-md navbar-dark border border-light mt-4 mb-5 no-cursor" href="#"
+          id="button">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon no-cursor"></span>
           </button>
-          <a class="navbar-brand" href="#">
-            <p class="navBarName">Max Reiss</p>
+          <a class="navbar-brand no-cursor" href="#">
+            <p class="navBarName no-cursor">Max Reiss</p>
           </a>
-          <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="btn">
-                <a class="nav-link" href="index.html">Home</a>
+          <div class="collapse navbar-collapse justify-content-end no-cursor" id="collapsibleNavbar">
+            <ul class="navbar-nav no-cursor">
+              <li class="btn no-cursor">
+                <a class="nav-link no-cursor" href="index.html">Home</a>
               </li>
-              <li class="btn">
-                <a class="nav-link" href="about.html">About</a>
+              <li class="btn no-cursor">
+                <a class="nav-link no-cursor" href="about.html">About</a>
               </li>
-              <li class="btn">
-                <a class="nav-link" href="imageGallery.html">Past Work</a>
+              <li class="btn no-cursor">
+                <a class="nav-link no-cursor" href="imageGallery.html">Past Work</a>
               </li>
-              <li class="btn">
-                <a class="nav-link" href="#Overall">Overall Skills</a>
-              </li>
-              <li class="btn">
-                <a class="nav-link" href="contact.html">Contact Me</a>
+              <li class="btn no-cursor">
+                <a class="nav-link no-cursor" href="contact.html">Contact Me</a>
               </li>
             </ul>
           </div>
         </nav>
-        <div class="row">
-          <p class="about1 text-white text-center">About Me</p>
+        <div class="row mb-5">
+          <div class="col-md-3"></div>
+          <div class="col-md-6  mt-5 pt-5 text-left">
+            <p class="about1 text-white">About</p>
+            <div class="decorator-inner_26F flex_3-n" style="color: white !important;">
+              <div class="w-divider-component-wrapper divider-component-wrapper_XE2"><svg
+                  xmlns="http://www.w3.org/2000/svg" width="3000px" height="32" style="width:100%;">
+                  <path d="M0 16 L3000 16" style="fill:none;stroke:currentColor;stroke-width:2px"></path>
+                </svg></div>
+            </div>
+          </div>
+          <div class="col mt-5 pt-5"></div>
+          <div class="col"></div>
         </div>
         <div class="row">
-          <div class="col"></div>
-          <div class="col text-end">
-            <img src="" class="max1 mt-5">
+
+          <div class="col-md aboutText1  mr-3">
+            <p class="text-white pt-3 pb-3 pl-3 pr-3" style="font-size: 30px;">
+              Qualifications:
+            </p>
+            <ul>
+              <li>
+                <p class="text-white">HTML</p>
+              </li>
+              <li>
+                <p class="text-white">CSS</p>
+              </li>
+              <li>
+                <p class="text-white">JavaScript</p>
+              </li>
+              <li>
+                <p class="text-white">Digital Media</p>
+              </li>
+            </ul>
           </div>
-          <div class="col">
-            <p class="aboutText1 text-white mt-5 pt-3 pb-3 pl-3 pr-3">
-              Hi, I'm Max Reiss, a 17-year-old from Marlboro, New Jersey. I'm passionate about web design and cybersecurity, with a love for computers and gaming inspiring my creativity and drive. I’ve been involved with web design for over 3 years, and have mastered HTML, CSS, & JavaScript. I also have experience with digital media where I can edit photos as well as design anything using photoshop. Computers and gaming are more than just hobbies–they’re integral parts of my life and inspire me for my web design projects. While I aim to establish myself as a skilled web designer, my primary career goal is cybersecurity. I think these fields complete each other well and offer unique challenges and opportunities for my growth. I plan to use both web design and cybersecurity to create a fulfilling and impactful career for myself.
+
+          <div class="col-md aboutText1">
+            <p class="aboutme1 text-white pt-3 pb-3 pl-3 pr-3">
+              Hi, I'm Max Reiss, a 17-year-old from Marlboro, New Jersey. I'm passionate about web design and
+              cybersecurity, with a love for computers and gaming inspiring my creativity and drive. I’ve been involved
+              with web design for over 3 years, and have mastered HTML, CSS, & JavaScript. I also have experience with
+              digital media where I can edit photos as well as design anything using photoshop. Computers and gaming are
+              more than just hobbies–they’re integral parts of my life and inspire me for my web design projects. While
+              I aim to establish myself as a skilled web designer, my primary career goal is cybersecurity. I think
+              these fields complete each other well and offer unique challenges and opportunities for my growth. I plan
+              to use both web design and cybersecurity to create a fulfilling and impactful career for myself.
             </p>
           </div>
+
+        </div>
+        <div class="row">
+          <div class="col"></div>
+          <div class="col text-center mb-5">
+            <img src="img/me.jpg" class="max1 mt-5">
+          </div>
           <div class="col"></div>
         </div>
 
+        <a href="#" class="scroll-top d-flex align-items-center justify-content-center">Back to Top ↑</a>
       </div>
+
     </div>
+  </div>
   </div>
 
   </div>
   </div>
   </div>
   </div>
+  <script>
+    const cursor = new MouseFollower({
+      el: null,
+      container: document.body,
+      className: "mf-cursor",
+      innerClassName: "mf-cursor-inner",
+      textClassName: "mf-cursor-text",
+      mediaClassName: "mf-cursor-media",
+      mediaBoxClassName: "mf-cursor-media-box",
+      iconSvgClassName: "mf-svgsprite",
+      iconSvgNamePrefix: "-",
+      iconSvgSrc: "",
+      dataAttr: "cursor",
+      hiddenState: "-hidden",
+      textState: "-text",
+      iconState: "-icon",
+      activeState: "-active",
+      mediaState: "-media",
+      stateDetection: {
+        "-pointer": "a,button",
+        "-hidden": "iframe",
+      },
+      visible: true,
+      visibleOnState: false,
+      speed: 0.55,
+      ease: "expo.out",
+      overwrite: true,
+      skewing: 0,
+      skewingText: 0,
+      skewingIcon: 2,
+      skewingMedia: 2,
+      skewingDelta: 0.001,
+      skewingDeltaMax: 0.15,
+      stickDelta: 0.15,
+      showTimeout: 20,
+      hideOnLeave: true,
+      hideTimeout: 300,
+      hideMediaTimeout: 300,
+    });
+
+  </script>
+  <!--Cursor hover effect from livebloggerofficial-->
   <script src="/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="//tympanus.net/codrops/adpacks/demoad.js"></script>
