--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css" />
+
+    <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
 </head>
 
 <body>
@@ -46,9 +52,6 @@
                             </li>
                             <li class="btn">
                                 <a class="nav-link" href="imageGallery.html">Past Work</a>
-                            </li>
-                            <li class="btn">
-                                <a class="nav-link" href="#Overall">Overall Skills</a>
                             </li>
                             <li class="btn">
                                 <a class="nav-link" href="contact.html">Contact Me</a>
@@ -109,6 +112,48 @@
             </div>
         </div>
     </div>
+    <script>
+        const cursor = new MouseFollower({
+          el: null,
+          container: document.body,
+          className: "mf-cursor",
+          innerClassName: "mf-cursor-inner",
+          textClassName: "mf-cursor-text",
+          mediaClassName: "mf-cursor-media",
+          mediaBoxClassName: "mf-cursor-media-box",
+          iconSvgClassName: "mf-svgsprite",
+          iconSvgNamePrefix: "-",
+          iconSvgSrc: "",
+          dataAttr: "cursor",
+          hiddenState: "-hidden",
+          textState: "-text",
+          iconState: "-icon",
+          activeState: "-active",
+          mediaState: "-media",
+          stateDetection: {
+            "-pointer": "a,button",
+            "-hidden": "iframe",
+          },
+          visible: true,
+          visibleOnState: false,
+          speed: 0.55,
+          ease: "expo.out",
+          overwrite: true,
+          skewing: 0,
+          skewingText: 0,
+          skewingIcon: 2,
+          skewingMedia: 2,
+          skewingDelta: 0.001,
+          skewingDeltaMax: 0.15,
+          stickDelta: 0.15,
+          showTimeout: 20,
+          hideOnLeave: true,
+          hideTimeout: 300,
+          hideMediaTimeout: 300,
+        });
+      
+      </script>
+      <!--Cursor hover effect from livebloggerofficial-->
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="//tympanus.net/codrops/adpacks/demoad.js"></script>
