--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         
 html {
     background-image: url(img/homepage1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
     </style>
 </head>
