added scroll up button

--- a/imageGallery.html
+++ b/imageGallery.html
@@ -166,6 +166,7 @@
             <p class="text-white">Click on the image to see the full website! (Year #1)</p>
           </div>
         </div>
+        <a href="#" class="scroll-top d-flex align-items-center justify-content-center">Back to Top ↑</a>
       </div>
     </div>
   </div>
