--- a/main.html
+++ b/main.html
@@ -35,8 +35,7 @@
     <div class="stars">
       <div class="twinkling">
 
-        <nav class="fill navbar navbar-expand-md navbar-dark border border-light mt-4 mb-5" href="#" id="button"
-          data-scrollto-offset="0">
+        <nav class="fill navbar navbar-expand-md navbar-dark border border-light mt-4 mb-5" href="#" id="button">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -87,7 +86,7 @@
           </div>
           <div class="col"></div>
         </div>
-        <div class="row rounded-bottom pb-5 mb-5 ml-2">
+        <div class="row rounded-bottom pb-5 mb-5">
           <div class="grid-container mb-5">
             <div class="border border-light">
               <a href="https://mreiss97.github.io/Little-Bird-Toys-Project/"><img class='grid-item grid-item-1'
